# saddle

./: LICENSE  README.md  README.zh.md  __init__.py  __main__.py  pyproject.toml
.saddle/agents/: README.md  clawteam-product-manager.md  clawteam-qa.md  clawteam-rnd-backend.md  clawteam-rnd-frontend.md  clawteam-system-architect.md  clawteam-team-lead.md  designteam-experience-design-expert.md  designteam-interaction-designer.md  designteam-product-designer.md  designteam-ui-designer.md  designteam-user-researcher.md  designteam-visual-ops-designer.md
.saddle/memory/: memories.jsonl
.saddle/modes/: deep.yaml  default.yaml  fast.yaml
docs/: COLLABORATION_CONFIG.md  COLLABORATION_CONFIG.zh.md  MODES.md  MODES.zh.md  PLUGIN_HTTP.md
docs/assets/: README.md
plugins/claude-code-plugin/: .env.example  README.md  package.json  plugin.json
plugins/openclaw-plugin/: README.md  SKILL.md  index.js  openclaw.plugin.json  package.json
scripts/: bootstrap-local.ps1  bootstrap-local.sh  e2e-smoke.py  install-claude-plugin.ps1  install-claude-plugin.sh  install-openclaw-plugin.ps1  install-openclaw-plugin.sh  release-claude-plugin.sh  release-openclaw-plugin.sh
studio/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tests/: conftest.py  test_memory_api.py  test_mode_cli.py  test_modes_api.py  test_modes_loader.py  test_modes_resolver.py  test_pipeline_api.py  test_pipeline_runner.py  test_plugin_hooks.py  test_plugin_http_contract.py  test_spec_store.py  test_studio_static.py  test_team_cli_aliases.py  test_team_prompts.py
(+80 files in other folders)
